<resources>
    <string name="app_name" translatable="false">Ping Pong</string>
    <string name="label_title">PingPongX</string>
    <string name="label_subtitle">Start game!</string>
    <string name="label_sub_subtitle">Fill players</string>
    <string name="hint_player_one">Player 1</string>
    <string name="hint_player_two">Player 2</string>
    <string name="button_begin">Start</string>
    <string name="label_develop_by">Development by Jaqueline</string>
</resources>
