<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerActivity">

    <TextView
            android:text="@string/label_title"
            android:layout_width="377dp"
            android:layout_height="46dp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textSize="32sp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/label_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textSize="32sp" android:textStyle="bold"
    />
    <TextView
            android:text="@string/label_sub_subtitle"
            android:layout_width="382dp"
            android:layout_height="53dp"
            android:id="@+id/textView3" android:textSize="22sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"/>
    <EditText
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etHome"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:hint="@string/hint_player_one" style="@style/home_input"/>
    <EditText
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etAway"
            app:layout_constraintEnd_toEndOf="@+id/etHome" app:layout_constraintStart_toStartOf="@+id/etHome"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/etHome"
            android:hint="@string/hint_player_two" style="@style/away_input"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            style="@style/custom_button"
            android:text="@string/button_begin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btStart"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/label_develop_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>